[package]
name = "ruliadema"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"

anyhow = "1.0"
chrono = { version = "0.4.43", features = ["serde"] }

log = "0.4"
env_logger = "0.11"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
